# pymalcolm

./: .coveragerc  .gitignore  .gitlab-ci.yml  .landscape.yml  .travis-install-hdf5.sh  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  Pipfile  README.rst  failed_scan_4_ticks.sh  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile
.github/workflows/: code.yml  docs.yml  main.yml
5.0/: .buildinfo  contents.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
5.0/_modules/: index.html
5.0/api/: core_api.html  external_api.html  yamlutil_api.html
5.0/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
5.0/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
5.1/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
5.1/.doctrees/: contents.doctree  index.doctree
5.1/_modules/: index.html
5.1/api/: core_api.html  external_api.html  yamlutil_api.html
5.1/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
5.1/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
5.2/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
5.2/_modules/: index.html
5.2/api/: core_api.html  external_api.html  yamlutil_api.html
5.2/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
5.2/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
5.3/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
5.3/_modules/: index.html
5.3/_sources/: index.rst.txt
5.3/_static/: theme_overrides.css
5.3/api/: core_api.html  external_api.html  yamlutil_api.html
5.3/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
5.3/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
5.4/: .buildinfo  contents.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
5.4/.doctrees/: contents.doctree
5.4/_modules/: index.html
5.4/api/: core_api.html  external_api.html  yamlutil_api.html
5.4/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
5.4/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
6.0/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
6.0/.doctrees/: index.doctree
6.0/_modules/: index.html
6.0/api/: core_api.html  external_api.html  yamlutil_api.html
6.0/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
6.0/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
6.1/: contents.html  objects.inv  py-modindex.html
6.1/_modules/: index.html
6.1/api/: external_api.html  yamlutil_api.html
6.1/reference/: contributing.html  datasets.html  infos.html  release_notes.html  structure.html  tags.html
6.1/tutorials/: areadetector.html  counter.html  hello.html
6.2/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
6.2.1/: .buildinfo  contents.html  genindex.html  index.html  py-modindex.html  search.html
6.2.1/_modules/: index.html
6.2.1/_sources/: index.rst.txt
6.2.1/api/: core_api.html  external_api.html  yamlutil_api.html
6.2.1/reference/: contributing.html  datasets.html  glossary.html  infos.html  messages.html  release_notes.html  statesets.html  structure.html  tags.html  triggering.html
6.2.1/tutorials/: areadetector.html  counter.html  detector.html  hello.html  motion.html  panda.html  pmac.html  scanning.html
6.2/_modules/: index.html
6.3/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
ci/: install_pyqt.sh
docs/: architecture.rst  conf.py  contents.rst  generate_api_docs.py  genindex.rst  index.html  index.rst  intro.rst  stateMachineDefs.iuml  stateMachineNotNormal.iuml  style.iuml
examples/: BL14I-ML-MALC-01.yaml  BL45P-ML-MALC-01.yaml  BL45P-ML-MALC-02.yaml  DEMO-AREADETECTOR.yaml  DEMO-HELLO-PVA.yaml  DEMO-HELLO.yaml  DEMO-TICKER.yaml  I08-MALC01.yaml  I18-MALC01.yaml  P45-MALC01.yaml  P45-MALC02.yaml  detector_example.yaml  dummy_pmac_example.yaml  hello_example.yaml  hello_example_pva.yaml  motor_example.yaml  pandabox_example.yaml  pandabox_onboard.py  pmac_simulator.py  test_rig_example.yaml
fix_ci/: .buildinfo  contents.html  genindex.html  index.html  py-modindex.html  search.html
malcolm/: __init__.py  _version_git.py  assemblyutil.py  compat.py  imalcolm.py  packageutil.py  parameters.py  profiler.py  sphinxext.py  syslogger.py  tags.py  testutil.py  util.py  version.py  yamlutil.py
master/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
merge/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
requirements/: docs.txt  test.txt
tests/: setup_malcolm_paths.py  test_assemblies.py  test_imalcolm.py  test_parameters.py  test_profiler.py  test_takes.py  test_wsclientcomms.py  test_wsservercomms.py  test_yamlutil.py
(+3340 files in other folders)
