[metadata]
name = malcolm
description = Scanning in the middlelayer
url = https://github.com/dls-controls/pymalcolm
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    enum34
    tornado
    numpy
    ruamel.yaml
    h5py
    p4p
    pygelf
    plop
    annotypes
    cothread
    scanpointgenerator
    vdsgen
    ipython

[options.package_data]
malcolm =
    modules/*/*/*.yaml
    modules/*/*/*.svg
    modules/system/db/*.template
    modules/web/www/*
    modules/web/www/static/css/*
    modules/web/www/static/js/*
    modules/web/www/static/media/*
# set this to True and include a MANIFEST.in file
include_package_data = True
zip_safe = False

[options.entry_points]
# Include a command line script
console_scripts =
    imalcolm = malcolm.imalcolm:main

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip=setup.py,conf.py

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
# Ignore unused imports/redefinitions in __init__.py
per-file-ignores = 
    **/__init__.py: F401, F811
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --black --mypy --tb=native -vv
