[metadata]
name = malcolm
description = Scanning in the middlelayer
url = https://github.com/dls-controls/pymalcolm
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    annotypes
    cothread
    h5py==2.9.0
    ipython
    numpy==1.21.5
    p4p==3.5.5
    packaging
    plop
    pygelf
    ruamel.yaml
    scanpointgenerator
    tornado
    vdsgen

[options.extras_require]
# For development tests/docs
dev = 
    atomicwrites
    black
    coverage
    codecov
    doc8
    flake8
    isort
    mock
    mypy
    nose
    pylint
    pytest
    pytest-cov
    pytest-black
    pytest-flake8
    pytest-mypy
    pytest-timeout
    sphinx==4.3.2
    sphinx-rtd-theme-github-versions
    typing
    types-mock

[options.package_data]
malcolm =
    modules/*/*/*.yaml
    modules/*/*/*.svg
    modules/*/*/*/*.json
    modules/system/db/*.template
    modules/web/www/*
    modules/web/www/static/css/*
    modules/web/www/static/js/*
    modules/web/www/static/media/*
    modules/ADPandABlocks/kinematics/*.nxs

# set this to True and include a MANIFEST.in file
include_package_data = True
zip_safe = False

[options.entry_points]
# Include a command line script
console_scripts =
    imalcolm = malcolm.imalcolm:main

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
# Ignore unused imports/redefinitions in __init__.py
per-file-ignores = 
    **/__init__.py: F401, F811
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --black --mypy --doctest-modules
